[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracestax"
version = "0.1.0"
description = "TraceStax SDK for Python task queues and serverless functions - Celery, Dramatiq, RQ, Huey, TaskIQ, AWS Lambda, Google Cloud Functions"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "TraceStax", email = "eng@tracestax.com" },
]
keywords = ["celery", "rq", "huey", "taskiq", "lambda", "cloud-functions", "monitoring", "observability", "task-queue", "worker", "serverless"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
celery = ["celery>=5.0"]
dramatiq = ["dramatiq>=1.13"]
rq = ["rq>=1.16"]
huey = ["huey>=2.4"]
taskiq = ["taskiq>=0.9"]
lambda = []  # no extra deps; only needs the stdlib + requests
cloud-functions = []  # no extra deps; only needs the stdlib + requests
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-timeout>=2.0",
    "celery>=5.0",
    "dramatiq>=1.13",
    "rq>=1.16",
    "huey>=2.4",
    "taskiq>=0.9",
    "requests-mock>=1.11",
]

[project.urls]
Homepage = "https://tracestax.com"
Documentation = "https://docs.tracestax.com/python"
Repository = "https://github.com/tracestax/tracestax-celery"

[tool.hatch.build.targets.wheel]
packages = ["src/tracestax"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
